java deprecation cleaning